save negatives set
Former-commit-id: 8cfd42341189d2636d5a672367025d8c3a27de4a [formerly 51d44336a5086b7e5c254205891cddfd191b3ca7]
Former-commit-id: 1b95d40454c704ed76025676bf8f352fb5a2d879

--- a/.gitignore
+++ b/.gitignore
@@ -430,3 +430,5 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
+data_phase1/TermsAndConditions.txt
+data_phase1/TermsAndConditions.txt
