best parameters save
Former-commit-id: 1e70146e0eed254e2ff7f86185507250beffb7d1 [formerly c527844a1febc8f2fcfa2ac1f594490d05cc7ac2]
Former-commit-id: 37418155d0618c4993f87d9c6a3ef5b0547a13c4

--- a/data/settings.yaml
+++ b/data/settings.yaml
@@ -1,14 +1,22 @@
-amazon_fashion:
-  5:
-    bi:
-      {num_lat: 3}
-  10:
-    bi:
-      {num_lat: 3}
 amazon_cloth:
   5:
     bi:
-      {num_lat: 3}
+      num_lat: 3
+    svd:
+      num_lat: 64
   10:
     bi:
-      {num_lat: 3}
+      num_lat: 3
+    svd:
+      num_lat: 64
+amazon_fashion:
+  5:
+    bi:
+      num_lat: 3
+    svd:
+      num_lat: 8
+  10:
+    bi:
+      num_lat: 3
+    svd:
+      num_lat: 8
