search and best parameters run
Former-commit-id: a9642c23b54922dec7b5534a1da29e7b5536ee6c [formerly 2755eba270c7e38d2460435c90b0b97e8c444721]
Former-commit-id: 345553e09f4ed3aa2cbc973202685b15c21a67b1

--- a/data/settings.yaml
+++ b/data/settings.yaml
@@ -4,19 +4,35 @@ amazon_cloth:
       num_lat: 3
     svd:
       num_lat: 64
+    svdpp:
+      num_lat: 64
+    popular:
+      {}
   10:
     bi:
       num_lat: 3
     svd:
       num_lat: 64
+    svdpp:
+      num_lat: 32
+    popular:
+      {}
 amazon_fashion:
   5:
     bi:
       num_lat: 3
     svd:
       num_lat: 8
+    svdpp:
+      num_lat: 8
+    popular:
+      {}
   10:
     bi:
       num_lat: 3
     svd:
       num_lat: 8
+    svdpp:
+      num_lat: 8
+    popular:
+      {}
