--- a/data/settings.yaml
+++ b/data/settings.yaml
@@ -20,9 +20,11 @@ amazon_cloth:
       {}
     stacking:
       models: ['popular','lightgcn']
+      #models: ['popular']
   10:
     stacking:
       models: ['popular','lightgcn']
+      #models: ['popular']
     bi:
       embedding_dim: 64
       lr: 0.01
@@ -45,6 +47,7 @@ amazon_fashion:
   5:
     stacking:
       models: ['popular','lightgcn']
+      #models: ['popular']
     random:
       {}
     bi:
@@ -65,6 +68,7 @@ amazon_fashion:
       num_lat: 8
   10:
     stacking:
+      #models: ['popular']
       models: ['popular','lightgcn']
     random:
       {}
